[project]
name = "mlxtransformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.13",
    "requests>=2.32.4",
    "streamlit>=1.46.0",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
    "uvicorn>=0.34.3",
    "wandb>=0.20.1",
]
